--- a/gui/src/index.html
+++ b/gui/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Velvet App</title>
-    <script src="/tailwind.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Velvet GUI</title>
+    <link rel="stylesheet" href="dist/styles.css">
 </head>
 <body class="bg-gray-100">
     <div id="app" class="flex flex-col items-center justify-center h-screen"></div>
