--- a/gui/src/index.html
+++ b/gui/src/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velvet GUI</title>
-    <link rel="stylesheet" href="dist/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100">
-    <div id="app" class="flex flex-col items-center justify-center h-screen"></div>
+<body>
+    <div id="app" class="container">
+        <h1>Velvet Application</h1>
+        <div id="components"></div>
+    </div>
     <script src="app.js"></script>
+    <script src="gui.js"></script>
+    <script src="events.js"></script>
 </body>
 </html>
