--- a/gui/src/index.html
+++ b/gui/src/index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app" class="container">
-        <h1>Velvet Application</h1>
-        <div id="components"></div>
+    <div class="container">
+        <header>
+            <h1>Velvet Application</h1>
+            <nav>
+                <button id="module-toggle">Toggle Modules</button>
+            </nav>
+        </header>
+        <div id="components" class="component-grid"></div>
+        <footer>
+            <p>Velvet Programming Language &copy; 2025</p>
+        </footer>
     </div>
     <script src="app.js"></script>
     <script src="gui.js"></script>
